--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<!-- BEGIN .topper -->
 	<div class="topper">
 
-		<nav class="nav" role="navigation">
+		<nav class="topper__nav" role="navigation">
 			<ul>
 				<li><a href="#">События</a></li>
 				<li><a href="#">Работа</a></li>
@@ -30,7 +30,7 @@
 			</ul>
 		</nav>
 
-		<ul class="profile">
+		<ul class="topper__profile">
 			<li><a href="#"><i class="icon icon-login"></i> Войти</a></li>
 			<li class="is-active"><a href="#">Зарегистрироваться</a></li>
 		</ul>
