--- a/login_error.html
+++ b/login_error.html
@@ -3,7 +3,7 @@
 <!--[if gt IE 8]><!--><html><!--<![endif]-->
 <head>
 	<meta charset="utf-8">
-	<title>stv - login</title>
+	<title>stv - login-error</title>
 	<meta name="viewport" content="width=device-width"/>
 	<link rel="stylesheet" media="screen" href="css/screen.css" >
 	<script src="js/jquery.js"></script>
@@ -38,16 +38,18 @@
 			<!-- BEGIN .form -->
 			<form class="form">
 				<div class="form__wrap">
-					<div class="form__line">
+					<div class="form__line formline__error">
 						<label class="form__label" for="inputEmail">Email</label>
 						<div class="form__controls">
-							<input type="text" id="inputEmail">
+							<input type="text" id="inputEmail" value="eteslov">
+							<div class="form__errorifno">К сожалению, логин или пароль не верные</div>
 						</div>
 					</div>
-					<div class="form__line">
+					<div class="form__line formline__error">
 						<label class="form__label" for="inputPassword">Пароль</label>
 						<div class="form__controls">
-							<input type="password" id="inputPassword" placeholder="">
+							<input type="password" id="inputPassword"  value="●●●●●●">
+							<div class="form__errorifno">Попробуйте <a href="#">восстановить пароль</a></div>
 						</div>
 					</div>
 					<div class="form__line form__request">
@@ -55,7 +57,7 @@
 					</div>
 				</div>
 				<div class="form__btn">
-						<button type="submit" class="btn btn-inactive" disabled>Войти</button>
+						<button type="submit" class="btn btn-success">Войти</button>
 				</div>
 			</form>
 			<!-- /.form -->
