Added pages 'reg' and 'reg-error'

--- a/login.html
+++ b/login.html
@@ -39,9 +39,9 @@
 			<form class="form">
 				<div class="form__wrap">
 					<div class="form__line">
-						<label class="form__label" for="inputEmail">Email</label>
+						<label class="form__label">Логин</label>
 						<div class="form__controls">
-							<input type="text" id="inputEmail">
+							<input type="text">
 						</div>
 					</div>
 					<div class="form__line">
@@ -82,7 +82,6 @@
 
 <!-- BEGIN .footer -->
 <footer class="footer">
-	<div class="footer__info">Информация предоставлена <a href="#" title="2GIS"><i class="icon icon-2gis">2GIS</i></a></div>
 	<div class="footer__copyright"><span>&copy;</span> stv.ru, 2013</div>
 	<div class="footer__text"><a href="#">Информационный портал<br> Ставрополя</a></div>
 	<a href="#" class="plus">16+</a>
