Fixed login popup

--- a/loginpopup.html
+++ b/loginpopup.html
@@ -37,7 +37,7 @@
 				<!-- BEGIN .loginpopup -->
 				<div class="loginpopup">
 					<div class="loginpopup__socials">
-						<h1 class="title">Войти через соцсети</h1>
+						<h1 class="title">через соцсети</h1>
 						<ul>
 							<li class="socials__fb"><a href="#"><i class="icon icon-fb"></i></a></li>
 							<li class="socials__tw"><a href="#"><i class="icon icon-tw"></i></a></li>
@@ -47,6 +47,7 @@
 					</div>
 					<form class="form">
 						<div class="form__wrap">
+							<h1 class="title">или используй:</h1>
 							<div class="form__line">
 								<div class="form__controls">
 									<input type="text" placeholder="Логин">
