--- a/stv.spravka-list.html
+++ b/stv.spravka-list.html
@@ -108,13 +108,106 @@
 														<input type="radio">
 														<i></i>
 														Работает сейчас
-														<span>21.06</span>
+														<span>21:06</span>
+													</label>
+												</div>
+											</li>
+											<li>
+												<div class="radio">
+													<label>
+														<input type="radio">
+														<i></i>
+														Работает круглосуточно
+													</label>
+												</div>
+											</li>
+											<li>
+												<div class="radio">
+													<label>
+														<input type="radio">
+														<i></i>
+														Работает
 													</label>
 												</div>
 											</li>
 										</ul>
+										<ul>
+											<h1 class="h1">Сортировать по:</h1>
+											<li>
+												<div class="radio">
+													<label>
+														<input type="radio">
+														<i></i>
+														лучшему совпадению
+													</label>
+												</div>
+											</li>
+											<li>
+												<div class="radio">
+													<label>
+														<input type="radio">
+														<i></i>
+														алфавиту
+													</label>
+												</div>
+											</li>
+											<li>
+												<div class="radio">
+													<label>
+														<input type="radio">
+														<i></i>
+														рейтингу
+													</label>
+												</div>
+											</li>
+										</ul>
+										<a href="#" class="btn btn-success">Показать</a>
 									</div>
 								</div>
+								<!-- BEGIN .search__result -->
+								<div class="search__result">
+									<ol>
+										<li>
+											<div class="search__result-item">
+												<h1 class="title"><a href="#">Партклуб, интернет-магазин автотоваров для иномарок</a></h1>
+												<div class="search__result-description">Магазин автозапчастей для иномарок. Оригинальные запчасти и замены.</div>
+												<div class="search__result-info__wrap">
+													<div class="search__result-info">
+														<p><a href="#">Ипподромская, 44</a></p>
+														<p><strong>+7 (383) 284-19-94</strong></p>
+														<p><strong>+7 (383) 287-50-42</strong></p>
+														<p>Пн—Вс: 9...20 часов (без обеда)</p>
+													</div>
+													<div class="search__result-info">
+														<p><a href="#">partclub.ru</a></p>
+														<p><a href="#">info@partclub.ru</a></p>
+													</div>
+												</div>
+												<div class="search__result-tags"><a href="#">Автозапчасти для иномарок</a>, <a href="#">Автоаксессуары</a>, <a href="#">Автохимия</a>, <a href="#">Автостекло</a>, <a href="#">Интернет-магазины</a></div>
+											</div>
+										</li>
+										<li>
+											<div class="search__result-item">
+												<h1 class="title"><a href="#">Партклуб, интернет-магазин автотоваров для иномарок</a></h1>
+												<div class="search__result-description">Магазин автозапчастей для иномарок. Оригинальные запчасти и замены.</div>
+												<div class="search__result-info__wrap">
+													<div class="search__result-info">
+														<p><a href="#">Ипподромская, 44</a></p>
+														<p><strong>+7 (383) 284-19-94</strong></p>
+														<p><strong>+7 (383) 287-50-42</strong></p>
+														<p>Пн—Вс: 9...20 часов (без обеда)</p>
+													</div>
+													<div class="search__result-info">
+														<p><a href="#">partclub.ru</a></p>
+														<p><a href="#">info@partclub.ru</a></p>
+													</div>
+												</div>
+												<div class="search__result-tags"><a href="#">Автозапчасти для иномарок</a>, <a href="#">Автоаксессуары</a>, <a href="#">Автохимия</a>, <a href="#">Автостекло</a>, <a href="#">Интернет-магазины</a></div>
+											</div>
+										</li>
+									</ol>
+								</div>
+								<!-- /.search__result -->
 							</div>
 							<!-- /.sidebar__search -->
 				        </div>
