--- a/stv.spravka.html
+++ b/stv.spravka.html
@@ -86,61 +86,61 @@
 	<!-- BEGIN .content -->
 	<div class="content" role="main">
 		<!-- BEGIN .sidebar -->
-		<aside class="sidebar">
-
-		<!-- BEGIN .catalog -->
-		<div class="catalog">
-			<h1 class="catalog__title"><a href="#">Каталог организаций города</a></h1>
-			<!-- BEGIN .baron -->
-			<div class="baron__in">
-			    <div class="baron__scroller">
-				        <div class="container">
-							<!-- BEGIN .catalog__list -->
-							<ul class="catalog__list">
-								<li class="active"><a href="#">Аварийные / Справочные / Экстренные службы</a>
-									<ul>
-										<li><a href="#">Управление ГО и ЧС</a></li>
-										<li><a href="#">Скорая медицинская помощь</a></li>
-										<li><a href="#">Службы спасения</a></li>
-										<li><a href="#">Службы экстренного вызова</a></li>
-										<li><a href="#">Телефоны доверия</a></li>
-										<li><a href="#">Независимые службы аварийных комиссаров</a></li>
-										<li><a href="#">Штрафстоянки</a></li>
-										<li><a href="#">Эвакуация автомобилей</a></li>
-										<li><a href="#">Справочно-информационные услуги</a></li>
-										<li><a href="#">Пожарная охрана</a></li>
-										<li><a href="#">Аварийные службы</a></li>
+		<aside class="sidebar js-sidebar">
+			<div class="sidebar__wrap">
+				<!-- BEGIN .catalog -->
+				<div class="catalog">
+					<h1 class="catalog__title"><a href="#">Каталог организаций города</a></h1>
+					<!-- BEGIN .baron -->
+					<div class="baron__in js-baron-list">
+					    <div class="baron__scroller">
+						        <div class="container">
+									<!-- BEGIN .catalog__list -->
+									<ul class="catalog__list">
+										<li class="active"><a href="#">Аварийные / Справочные / Экстренные службы</a>
+											<ul>
+												<li><a href="#">Управление ГО и ЧС</a></li>
+												<li><a href="#">Скорая медицинская помощь</a></li>
+												<li><a href="#">Службы спасения</a></li>
+												<li><a href="#">Службы экстренного вызова</a></li>
+												<li><a href="#">Телефоны доверия</a></li>
+												<li><a href="#">Независимые службы аварийных комиссаров</a></li>
+												<li><a href="#">Штрафстоянки</a></li>
+												<li><a href="#">Эвакуация автомобилей</a></li>
+												<li><a href="#">Справочно-информационные услуги</a></li>
+												<li><a href="#">Пожарная охрана</a></li>
+												<li><a href="#">Аварийные службы</a></li>
+											</ul>
+										</li>
+										<li><a href="#">Автосервис / Автотовары</a></li>
+										<li><a href="#">Город / Власть</a></li>
+										<li><a href="#">Досуг / Развлечения / Общественное</a></li>
+										<li><a href="#">Интернет / Связь / Информационные технологии</a></li>
+										<li><a href="#">Коммунальные / Бытовые / Ритуальные услуги</a></li>
+										<li><a href="#">Компьютеры / Бытовая техника / Офисная техника</a></li>
+										<li><a href="#">Культура / Искусство / Религия</a></li>
+										<li><a href="#">Мебель / Фурнитура / Материалы</a></li>
 									</ul>
-								</li>
-								<li><a href="#">Автосервис / Автотовары</a></li>
-								<li><a href="#">Город / Власть</a></li>
-								<li><a href="#">Досуг / Развлечения / Общественное</a></li>
-								<li><a href="#">Интернет / Связь / Информационные технологии</a></li>
-								<li><a href="#">Коммунальные / Бытовые / Ритуальные услуги</a></li>
-								<li><a href="#">Компьютеры / Бытовая техника / Офисная техника</a></li>
-								<li><a href="#">Культура / Искусство / Религия</a></li>
-								<li><a href="#">Мебель / Фурнитура / Материалы</a></li>
-							</ul>
-							<!-- /.catalog__list -->
-				        </div>
-				        <div class="baron__scrollerbar-wrapper">
-				            <div class="baron__scrollerbar"></div>
-				        </div>
-			    </div>
+									<!-- /.catalog__list -->
+						        </div>
+						        <div class="baron__scrollerbar-wrapper">
+						            <div class="baron__scrollerbar"></div>
+						        </div>
+					    </div>
+					</div>
+					<!-- /.baron -->
+				</div>
+				<!-- /.catalog -->
+				<button class="sidebar-key is-active js-sidebar-key"><i></i></button>
+				<!-- BEGIN .footer -->
+				<footer class="footer">
+					<div class="footer__info">Информация предоставлена <a href="#" title="2GIS"><i class="icon icon-2gis">2GIS</i></a></div>
+					<div class="footer__copyright"><span>&copy;</span> stv.ru, 2013</div>
+					<div class="footer__text"><a href="#">Информационный портал<br> Ставрополя</a></div>
+					<a href="#" class="plus">0+</a>
+				</footer>
+				<!-- /.footer -->
 			</div>
-			<!-- /.baron -->
-		</div>
-		<!-- /.catalog -->
-		<button class="sidebar-key is-active js-sidebar-key"><i></i></button>
-		<!-- BEGIN .footer -->
-		<footer class="footer">
-			<div class="footer__info">Информация предоставлена <a href="#" title="2GIS"><i class="icon icon-2gis">2GIS</i></a></div>
-			<div class="footer__copyright"><span>&copy;</span> stv.ru, 2013</div>
-			<div class="footer__text"><a href="#">Информационный портал<br> Ставрополя</a></div>
-			<a href="#" class="plus">0+</a>
-		</footer>
-		<!-- /.footer -->
-
 		</aside>
 		<!-- /.sidebar -->
 	</div>
