--- a/stv.spravka-list.html
+++ b/stv.spravka-list.html
@@ -12,10 +12,6 @@
 	<script src="http://api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU"></script>
 </head>
 <body>
-
-<!-- BEGIN .out -->
-<div class="out">
-
 	<!-- BEGIN .topper -->
 	<div class="topper">
 
@@ -86,67 +82,169 @@
 	<!-- BEGIN .content -->
 	<div class="content" role="main">
 		<!-- BEGIN .sidebar -->
-		<aside class="sidebar">
-
-		<!-- BEGIN .catalog -->
-		<div class="catalog">
-			<h1 class="catalog__title"><a href="#">Каталог организаций города</a></h1>
-			<!-- BEGIN .baron -->
-			<div class="baron__in">
-			    <div class="baron__scroller">
-				        <div class="container">
-							<!-- BEGIN .sidebar__search -->
-							<div class="search">
-								<span class="sticker sticker_yellow">Автоаксессуары: 590 организаций</span>
-								<div class="accordion js-accord">
-									<span class="accordion__title"><i></i>Уточнить параметры поиска</span>
-									<div class="accordion__body">
-										<ul>
-											<li>
-												<div class="radio">
-													<label>
-														<input type="radio">
-														<i></i>
-														Работает сейчас
-														<span>21.06</span>
-													</label>
-												</div>
-											</li>
-										</ul>
+		<aside class="sidebar js-sidebar">
+			<div class="sidebar__wrap">
+				<!-- BEGIN .catalog -->
+				<div class="catalog">
+					<h1 class="catalog__title"><a href="#">Каталог организаций города</a></h1>
+					<!-- BEGIN .baron -->
+					<div class="baron__in js-baron-list">
+					    <div class="baron__scroller">
+						        <div class="container">
+									<!-- BEGIN .sidebar__search -->
+									<div class="search">
+										<span class="sticker sticker_yellow">Автоаксессуары: 590 организаций</span>
+										<div class="accordion">
+											<span class="accordion__title js-accord"><i></i>Уточнить параметры поиска</span>
+											<div class="accordion__body js-accord-body">
+												<ul>
+													<li>
+														<div class="radio">
+															<label>
+																<input class="radio__btn" type="radio" name="name1">
+																<i></i>
+																Работает сейчас
+																<span>21:06</span>
+															</label>
+														</div>
+													</li>
+													<li>
+														<div class="radio">
+															<label>
+																<input class="radio__btn" type="radio" name="name1">
+																<i></i>
+																Работает круглосуточно
+															</label>
+														</div>
+													</li>
+													<li>
+														<div class="radio">
+															<label>
+																<input class="radio__btn" type="radio" name="name1">
+																<i></i>
+																Работает
+															</label>
+															<input class="radio__text" type="text" value="21:06" readonly>
+															<div class="select">
+																<div class="select__text js-select">
+																	<span>пн</span>
+																	<i></i>
+																</div>
+																<ul class="js-select-list">
+																	<li>Пн</li>
+																	<li>Вт</li>
+																	<li>Ср</li>
+																	<li>Чт</li>
+																	<li>Пт</li>
+																	<li>Сб</li>
+																	<li>Нд</li>
+																</ul>
+															</div>
+														</div>
+													</li>
+												</ul>
+												<ul>
+													<h1 class="h1">Сортировать по:</h1>
+													<li>
+														<div class="radio">
+															<label>
+																<input class="radio__btn" type="radio" name="name2">
+																<i></i>
+																лучшему совпадению
+															</label>
+														</div>
+													</li>
+													<li>
+														<div class="radio">
+															<label>
+																<input class="radio__btn" type="radio" name="name2">
+																<i></i>
+																алфавиту
+															</label>
+														</div>
+													</li>
+													<li>
+														<div class="radio">
+															<label>
+																<input class="radio__btn" type="radio" name="name2">
+																<i></i>
+																рейтингу
+															</label>
+														</div>
+													</li>
+												</ul>
+												<a href="#" class="btn btn-success">Показать</a>
+											</div>
+										</div>
+										<!-- BEGIN .search__result -->
+										<div class="search__result">
+											<ol>
+												<li>
+													<div class="search__result-item">
+														<h1 class="title"><a href="#">Партклуб, интернет-магазин автотоваров для иномарок</a></h1>
+														<div class="search__result-description">Магазин автозапчастей для иномарок. Оригинальные запчасти и замены.</div>
+														<div class="search__result-info__wrap">
+															<div class="search__result-info">
+																<p><a href="#">Ипподромская, 44</a></p>
+																<p><strong>+7 (383) 284-19-94</strong></p>
+																<p><strong>+7 (383) 287-50-42</strong></p>
+																<p>Пн—Вс: 9...20 часов (без обеда)</p>
+															</div>
+															<div class="search__result-info">
+																<p><a href="#">partclub.ru</a></p>
+																<p><a href="#">info@partclub.ru</a></p>
+															</div>
+														</div>
+														<div class="search__result-tags"><a href="#">Автозапчасти для иномарок</a>, <a href="#">Автоаксессуары</a>, <a href="#">Автохимия</a>, <a href="#">Автостекло</a>, <a href="#">Интернет-магазины</a></div>
+													</div>
+												</li>
+												<li>
+													<div class="search__result-item">
+														<h1 class="title"><a href="#">Партклуб, интернет-магазин автотоваров для иномарок</a></h1>
+														<div class="search__result-description">Магазин автозапчастей для иномарок. Оригинальные запчасти и замены.</div>
+														<div class="search__result-info__wrap">
+															<div class="search__result-info">
+																<p><a href="#">Ипподромская, 44</a></p>
+																<p><strong>+7 (383) 284-19-94</strong></p>
+																<p><strong>+7 (383) 287-50-42</strong></p>
+																<p>Пн—Вс: 9...20 часов (без обеда)</p>
+															</div>
+															<div class="search__result-info">
+																<p><a href="#">partclub.ru</a></p>
+																<p><a href="#">info@partclub.ru</a></p>
+															</div>
+														</div>
+														<div class="search__result-tags"><a href="#">Автозапчасти для иномарок</a>, <a href="#">Автоаксессуары</a>, <a href="#">Автохимия</a>, <a href="#">Автостекло</a>, <a href="#">Интернет-магазины</a></div>
+													</div>
+												</li>
+											</ol>
+										</div>
+										<!-- /.search__result -->
 									</div>
-								</div>
-							</div>
-							<!-- /.sidebar__search -->
-				        </div>
-				        <div class="baron__scrollerbar-wrapper">
-				            <div class="baron__scrollerbar"></div>
-				        </div>
-			    </div>
+									<!-- /.sidebar__search -->
+						        </div>
+						        <div class="baron__scrollerbar-wrapper">
+						            <div class="baron__scrollerbar"></div>
+						        </div>
+					    </div>
+					</div>
+					<!-- /.baron -->
+				</div>
+				<!-- /.catalog -->
+				<button class="sidebar-key is-active js-sidebar-key"><i></i></button>
+				<!-- BEGIN .footer -->
+				<footer class="footer">
+					<div class="footer__info">Информация предоставлена <a href="#" title="2GIS"><i class="icon icon-2gis">2GIS</i></a></div>
+					<div class="footer__copyright"><span>&copy;</span> stv.ru, 2013</div>
+					<div class="footer__text"><a href="#">Информационный портал<br> Ставрополя</a></div>
+					<a href="#" class="plus">0+</a>
+				</footer>
+				<!-- /.footer -->
 			</div>
-			<!-- /.baron -->
-		</div>
-		<!-- /.catalog -->
-		<button class="sidebar-key is-active js-sidebar-key"><i></i></button>
-		<!-- BEGIN .footer -->
-		<footer class="footer">
-			<div class="footer__info">Информация предоставлена <a href="#" title="2GIS"><i class="icon icon-2gis">2GIS</i></a></div>
-			<div class="footer__copyright"><span>&copy;</span> stv.ru, 2013</div>
-			<div class="footer__text"><a href="#">Информационный портал<br> Ставрополя</a></div>
-			<a href="#" class="plus">0+</a>
-		</footer>
-		<!-- /.footer -->
-
 		</aside>
 		<!-- /.sidebar -->
 	</div>
 	<!-- /.content -->
-
-</div>
-<!-- /.out -->
-
-
-
-
 <!-- BEGIN .tooltip -->
 <div class="tooltip" style="position:fixed; top:280px; left: 50%;">
 	<h1 class="tooltip__title">Партклуб, интернет-магазин автотоваров для иномарок</h1>
