--- a/stv.spravka.html
+++ b/stv.spravka.html
@@ -12,10 +12,6 @@
 	<script src="http://api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU"></script>
 </head>
 <body>
-
-<!-- BEGIN .out -->
-<div class="out">
-
 	<!-- BEGIN .topper -->
 	<div class="topper">
 
@@ -97,8 +93,8 @@
 						        <div class="container">
 									<!-- BEGIN .catalog__list -->
 									<ul class="catalog__list">
-										<li class="active"><a href="#">Аварийные / Справочные / Экстренные службы</a>
-											<ul>
+										<li><a href="#" class="js-accord">Аварийные / Справочные / Экстренные службы</a>
+											<ul class="js-accord-body">
 												<li><a href="#">Управление ГО и ЧС</a></li>
 												<li><a href="#">Скорая медицинская помощь</a></li>
 												<li><a href="#">Службы спасения</a></li>
@@ -112,14 +108,134 @@
 												<li><a href="#">Аварийные службы</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Автосервис / Автотовары</a></li>
-										<li><a href="#">Город / Власть</a></li>
-										<li><a href="#">Досуг / Развлечения / Общественное</a></li>
-										<li><a href="#">Интернет / Связь / Информационные технологии</a></li>
-										<li><a href="#">Коммунальные / Бытовые / Ритуальные услуги</a></li>
-										<li><a href="#">Компьютеры / Бытовая техника / Офисная техника</a></li>
-										<li><a href="#">Культура / Искусство / Религия</a></li>
-										<li><a href="#">Мебель / Фурнитура / Материалы</a></li>
+										<li>
+											<a href="#" class="js-accord">Автосервис / Автотовары</a>
+											<ul class="js-accord-body">
+												<li><a href="#">Управление ГО и ЧС</a></li>
+												<li><a href="#">Скорая медицинская помощь</a></li>
+												<li><a href="#">Службы спасения</a></li>
+												<li><a href="#">Службы экстренного вызова</a></li>
+												<li><a href="#">Телефоны доверия</a></li>
+												<li><a href="#">Независимые службы аварийных комиссаров</a></li>
+												<li><a href="#">Штрафстоянки</a></li>
+												<li><a href="#">Эвакуация автомобилей</a></li>
+												<li><a href="#">Справочно-информационные услуги</a></li>
+												<li><a href="#">Пожарная охрана</a></li>
+												<li><a href="#">Аварийные службы</a></li>
+											</ul>
+										</li>
+										<li>
+											<a href="#" class="js-accord">Город / Власть</a>
+											<ul class="js-accord-body">
+												<li><a href="#">Управление ГО и ЧС</a></li>
+												<li><a href="#">Скорая медицинская помощь</a></li>
+												<li><a href="#">Службы спасения</a></li>
+												<li><a href="#">Службы экстренного вызова</a></li>
+												<li><a href="#">Телефоны доверия</a></li>
+												<li><a href="#">Независимые службы аварийных комиссаров</a></li>
+												<li><a href="#">Штрафстоянки</a></li>
+												<li><a href="#">Эвакуация автомобилей</a></li>
+												<li><a href="#">Справочно-информационные услуги</a></li>
+												<li><a href="#">Пожарная охрана</a></li>
+												<li><a href="#">Аварийные службы</a></li>
+											</ul>
+										</li>
+										<li>
+											<a href="#" class="js-accord">Досуг / Развлечения / Общественное</a>
+											<ul class="js-accord-body">
+												<li><a href="#">Управление ГО и ЧС</a></li>
+												<li><a href="#">Скорая медицинская помощь</a></li>
+												<li><a href="#">Службы спасения</a></li>
+												<li><a href="#">Службы экстренного вызова</a></li>
+												<li><a href="#">Телефоны доверия</a></li>
+												<li><a href="#">Независимые службы аварийных комиссаров</a></li>
+												<li><a href="#">Штрафстоянки</a></li>
+												<li><a href="#">Эвакуация автомобилей</a></li>
+												<li><a href="#">Справочно-информационные услуги</a></li>
+												<li><a href="#">Пожарная охрана</a></li>
+												<li><a href="#">Аварийные службы</a></li>
+											</ul>
+										</li>
+										<li>
+											<a href="#" class="js-accord">Интернет / Связь / Информационные технологии</a>
+											<ul class="js-accord-body">
+												<li><a href="#">Управление ГО и ЧС</a></li>
+												<li><a href="#">Скорая медицинская помощь</a></li>
+												<li><a href="#">Службы спасения</a></li>
+												<li><a href="#">Службы экстренного вызова</a></li>
+												<li><a href="#">Телефоны доверия</a></li>
+												<li><a href="#">Независимые службы аварийных комиссаров</a></li>
+												<li><a href="#">Штрафстоянки</a></li>
+												<li><a href="#">Эвакуация автомобилей</a></li>
+												<li><a href="#">Справочно-информационные услуги</a></li>
+												<li><a href="#">Пожарная охрана</a></li>
+												<li><a href="#">Аварийные службы</a></li>
+											</ul>
+										</li>
+										<li>
+											<a href="#" class="js-accord">Коммунальные / Бытовые / Ритуальные услуги</a>
+											<ul class="js-accord-body">
+												<li><a href="#">Управление ГО и ЧС</a></li>
+												<li><a href="#">Скорая медицинская помощь</a></li>
+												<li><a href="#">Службы спасения</a></li>
+												<li><a href="#">Службы экстренного вызова</a></li>
+												<li><a href="#">Телефоны доверия</a></li>
+												<li><a href="#">Независимые службы аварийных комиссаров</a></li>
+												<li><a href="#">Штрафстоянки</a></li>
+												<li><a href="#">Эвакуация автомобилей</a></li>
+												<li><a href="#">Справочно-информационные услуги</a></li>
+												<li><a href="#">Пожарная охрана</a></li>
+												<li><a href="#">Аварийные службы</a></li>
+											</ul>
+										</li>
+										<li>
+											<a href="#" class="js-accord">Компьютеры / Бытовая техника / Офисная техника</a>
+											<ul class="js-accord-body">
+												<li><a href="#">Управление ГО и ЧС</a></li>
+												<li><a href="#">Скорая медицинская помощь</a></li>
+												<li><a href="#">Службы спасения</a></li>
+												<li><a href="#">Службы экстренного вызова</a></li>
+												<li><a href="#">Телефоны доверия</a></li>
+												<li><a href="#">Независимые службы аварийных комиссаров</a></li>
+												<li><a href="#">Штрафстоянки</a></li>
+												<li><a href="#">Эвакуация автомобилей</a></li>
+												<li><a href="#">Справочно-информационные услуги</a></li>
+												<li><a href="#">Пожарная охрана</a></li>
+												<li><a href="#">Аварийные службы</a></li>
+											</ul>
+										</li>
+										<li>
+											<a href="#" class="js-accord">Культура / Искусство / Религия</a>
+											<ul class="js-accord-body">
+												<li><a href="#">Управление ГО и ЧС</a></li>
+												<li><a href="#">Скорая медицинская помощь</a></li>
+												<li><a href="#">Службы спасения</a></li>
+												<li><a href="#">Службы экстренного вызова</a></li>
+												<li><a href="#">Телефоны доверия</a></li>
+												<li><a href="#">Независимые службы аварийных комиссаров</a></li>
+												<li><a href="#">Штрафстоянки</a></li>
+												<li><a href="#">Эвакуация автомобилей</a></li>
+												<li><a href="#">Справочно-информационные услуги</a></li>
+												<li><a href="#">Пожарная охрана</a></li>
+												<li><a href="#">Аварийные службы</a></li>
+											</ul>
+										</li>
+										<li>
+											<a href="#" class="js-accord">Мебель / Фурнитура / Материалы</a>
+											<ul class="js-accord-body">
+												<li><a href="#">Управление ГО и ЧС</a></li>
+												<li><a href="#">Скорая медицинская помощь</a></li>
+												<li><a href="#">Службы спасения</a></li>
+												<li><a href="#">Службы экстренного вызова</a></li>
+												<li><a href="#">Телефоны доверия</a></li>
+												<li><a href="#">Независимые службы аварийных комиссаров</a></li>
+												<li><a href="#">Штрафстоянки</a></li>
+												<li><a href="#">Эвакуация автомобилей</a></li>
+												<li><a href="#">Справочно-информационные услуги</a></li>
+												<li><a href="#">Пожарная охрана</a></li>
+												<li><a href="#">Аварийные службы</a></li>
+											</ul>
+										</li>
 									</ul>
 									<!-- /.catalog__list -->
 						        </div>
@@ -145,13 +261,6 @@
 		<!-- /.sidebar -->
 	</div>
 	<!-- /.content -->
-
-</div>
-<!-- /.out -->
-
-
-
-
 <!-- BEGIN .tooltip -->
 <div class="tooltip" style="position:fixed; top:280px; left: 50%;">
 	<h1 class="tooltip__title">Партклуб, интернет-магазин автотоваров для иномарок</h1>
