--- a/11_stv_login.html
+++ b/11_stv_login.html
@@ -3,7 +3,10 @@
 <!--[if gt IE 8]><!--><html><!--<![endif]-->
 <head>
 	<meta charset="utf-8">
-	<title>stv - login</title>
+	<title>stv.login</title>
+	<!--[if lt IE 9]>
+		<script src="js/html5shiv.js"></script>
+	<![endif]-->
 	<meta name="viewport" content="width=device-width"/>
 	<link rel="stylesheet" media="screen" href="css/screen.css" >
 	<script src="js/jquery.js"></script>
@@ -20,7 +23,13 @@
 	<!-- BEGIN .header -->
 	<header class="header" role="banner">
 
-		<h1 class="header__logo"><a href="#" title="STV .Работа Ставрополь">STV .Работа Ставрополь</a></h1>
+		<h1 class="logo">
+			<a href="#" title="STV .Справочник Ставрополь">
+				<span class="logo__name">stv</span>
+				<span class="logo__category">.работа</span>
+				<span class="logo__city">Ставрополь</span>
+			</a>
+		</h1>
 
 	</header>
 	<!-- /.header -->
