--- a/01_stv.spravka.list.html
+++ b/01_stv.spravka.list.html
@@ -32,7 +32,7 @@
 		</nav>
 
 		<ul class="topper__profile">
-			<li class="is-active"><a href="#"><i class="icon icon-login"></i> Войти</a>
+			<li><a class="js-login" href="#"><i class="icon icon-login symbol">v</i> Войти</a>
 				<!-- BEGIN .loginpopup -->
 				<div class="loginpopup">
 					<div class="loginpopup__socials">
@@ -91,14 +91,14 @@
 				<input type="text" placeholder="Название, рубрика, телефон, сайт">
 				<strong>Где:</strong>
 				<input type="text" placeholder="Улица, Адрес">
-				<button type="submit" class="btn btn-inverse"><i class="icon icon-search"></i>Найти</button>
+				<button type="submit" class="btn btn-inverse"><i class="icon icon-search symbol">&#0035;</i>Найти</button>
 			</form>
 		</div>
 
 		<ul class="header__links">
-			<li><a href="#"><i class="icon icon-url"></i>Ссылка</a>
+			<li><a href="#" class="js-links-popup"><i class="icon symbol">&#0111;</i>Ссылка</a>
 				<!-- BEGIN .header__links-popup -->
-				<div class="header__links-popup">
+				<div class="header__links-popup js-links">
 					<div class="header__links-popup-wrap">
 						<span>Прямая ссылка на карту:</span>
 						<input type="text" readonly="readonly" value="maps.stv.ru/ly?qBd">
@@ -106,9 +106,9 @@
 				</div>
 				<!-- /.header__links-popup -->
 			</li>
-			<li><a href="#"><i class="icon icon-location"></i>Карта</a>
+			<li><a class=" js-maps-popup" href="#"><i class="icon symbol">&#0117;</i>Карта</a>
 				<!-- BEGIN .header__links-popup -->
-				<div class="header__links-popup header__links-popup_mod">
+				<div class="header__links-popup header__links-popup_mod  js-maps">
 					<div class="header__links-popup-wrap">
 						<ul>
 							<li><a href="#"><span class="mark-ya">Я</span>ндекс.Карты</a></li>
@@ -168,7 +168,7 @@
 																<i></i>
 																Работает
 															</label>
-															<input class="radio__text" type="text" value="21:06" readonly>
+															<input class="radio__text" type="text" value="21:06">
 															<div class="select">
 																<div class="select__text js-select">
 																	<span>пн</span>
@@ -225,7 +225,7 @@
 											<ol>
 												<li>
 													<div class="search__result-item">
-														<h1 class="title"><a href="#">Партклуб, интернет-магазин автотоваров для иномарок</a></h1>
+														<h1 class="title"><a href="#"><span>Партклуб, интернет-магазин автотоваров для иномарок</span></a></h1>
 														<div class="search__result-description">Магазин автозапчастей для иномарок. Оригинальные запчасти и замены.</div>
 														<div class="search__result-info__wrap">
 															<div class="search__result-info">
@@ -244,7 +244,7 @@
 												</li>
 												<li>
 													<div class="search__result-item">
-														<h1 class="title"><a href="#">Партклуб, интернет-магазин автотоваров для иномарок</a></h1>
+														<h1 class="title"><a href="#"><span>Партклуб, интернет-магазин автотоваров для иномарок</span></a></h1>
 														<div class="search__result-description">Магазин автозапчастей для иномарок. Оригинальные запчасти и замены.</div>
 														<div class="search__result-info__wrap">
 															<div class="search__result-info">
@@ -289,29 +289,30 @@
 		<!-- /.sidebar -->
 	</div>
 	<!-- /.content -->
-<!-- BEGIN .tooltip -->
-<div class="tooltip" style="position:fixed; top:280px; left: 50%;">
-	<h1 class="tooltip__title">Партклуб, интернет-магазин автотоваров для иномарок</h1>
-	<div class="tooltip__tags"><a href="#">Автозапчасти для иномарок</a>, <a href="#">Автоаксессуары</a>, <a href="#">Автохимия</a>, <a href="#">Автостекло</a>, <a href="#">Интернет-магазины</a></div>
-	<div class="tooltip__info">
-		<p><a href="#">Ипподромская, 44</a></p>
-		<p><strong>+7 (383) 284-19-94</strong></p>
-		<p><strong>+7 (383) 287-50-42</strong></p>
-		<p>Пн—Вс: 9...20 часов (без обеда)</p>
-	</div>
-	<div class="tooltip__info">
-		<p><a href="#">partclub.ru</a></p>
-		<p><a href="#">info@partclub.ru</a></p>
-	</div>
-	<p><a href="#">Карточка организации</a></p>
-</div>
-<!-- /.tooltip -->
 
 <!-- BEGIN .pin -->
-<a href="#" class="pin" style="position:fixed; top:300px; left:850px;"><span>5</span></a>
-<a href="#" class="pin" style="position:fixed; top:400px; left:880px;"><span>4</span></a>
-<div class="pin" style="position:fixed; top:300px; left:1400px;"><span>3</span></div>
-<div class="pin" style="position:fixed; top:370px; left:1350px;"><span>2</span></div>
+<div class="pin js-pin" style="position:fixed; top:450px; left:800px;">
+	<div class="pin__wrap">
+		<span>1</span>
+		<!-- BEGIN .tooltip -->
+		<div class="tooltip">
+			<h1 class="tooltip__title">Партклуб, интернет-магазин автотоваров для иномарок</h1>
+			<div class="tooltip__tags"><a href="#">Автозапчасти для иномарок</a>, <a href="#">Автоаксессуары</a>, <a href="#">Автохимия</a>, <a href="#">Автостекло</a>, <a href="#">Интернет-магазины</a></div>
+			<div class="tooltip__info">
+				<p><a href="#">Ипподромская, 44</a></p>
+				<p><strong>+7 (383) 284-19-94</strong></p>
+				<p><strong>+7 (383) 287-50-42</strong></p>
+				<p>Пн—Вс: 9...20 часов (без обеда)</p>
+			</div>
+			<div class="tooltip__info">
+				<p><a href="#">partclub.ru</a></p>
+				<p><a href="#">info@partclub.ru</a></p>
+			</div>
+			<p><a href="#">Карточка организации</a></p>
+		</div>
+		<!-- /.tooltip -->
+	</div>
+</div>
 <!-- /.pin -->
 
 <!-- BEGIN #Yandex-Map -->
